[tool.poetry]
name = "ddapi"
version = "0.1.0"
description = ""
authors = ["ByFox <byfox213@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
aiohttp = "^3.9.1"
orjson = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
