[metadata]
name = ddapi
version = 0.10.0
author = ByFox
description = DDnet api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ByFox213/ddapi
project_urls =
    github = https://github.com/ByFox213/ddapi
license = "MIT"

[options]
package_dir =
    = ddapi
packages = find:
python_requires = >=3.8

[options.packages.find]
where = ddapi
