[metadata]
name = ddapi
version = 0.12.0
author = ByFox
description = DDnet api
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ByFox213/ddapi
project_urls =
    github = https://github.com/ByFox213/ddapi
license_files = LICENSE.txt

[options]
package_dir =
    = ddapi
packages = find:
python_requires = >=3.9
install_requires = ['aiohttp>=3.11.11', 'pydantic>=2.10.5']

[options.packages.find]
where = ddapi
